# code_base_mcp

./: .gitignore  GEMINI.md  README.md  cli.py  main.py  pyproject.toml
.claude/commands/deepthinking/: userstory_2_prd.md
.claude/skills/concept-crystallizer/: SKILL.md
.claude/skills/create_test_case/: SKILL.md
.claude/skills/logic-auditor/: SKILL.md
.claude/skills/schema-architect/: SKILL.md
.claude/skills/ui-simulator/: SKILL.md
java_call_graph/: __init__.py  accessor_detector.py  adapter.py  call_extractor.py  coverage.py  formatter.py  models.py  parser.py  query.py  scanner.py  schema.sql  storage.py
tools/: __init__.py  code_base_tools.py
