[project]
name = "code-base-mcp"
version = "0.1.0"
description = "MCP server for code browsing"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.1.2",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "sse-starlette>=3.0.0",
    "javalang>=0.13.0",
    "fastmcp>=2.14.4",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.scripts]
code-base-cli = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openspec", "java_call_graph", "cli.py"]
